--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,92 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+
 body {
-  background-color: antiquewhite;
+  margin: 0;
+  background-color: #2A3342;
+  font-family: 'Poppins', sans-serif;
 }
+
+* {
+  box-sizing: border-box;
+}
+
+.form {
+  background-color: #F7F8F9;
+  display: flex;
+  flex-flow: column;
+  row-gap: 32px;
+  padding: 40px;
+  max-width: 945px;
+  width: 100%;
+  margin: 30px auto;
+  border-radius: 6px;
+  box-shadow: 0 1px 2px rgba(85, 105, 135, 0.1);
+}
+
+.form__row {
+  display: grid;
+  grid-template-columns: 100%;
+  gap: 32px;
+  justify-content: space-between;
+}
+
+.form__row--2 {
+  grid-template-columns: 1fr 1fr;
+}
+
+.form__row--3 {
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.form__summary {
+  display: flex;
+  justify-content: space-between;
+}
+
+.form__btn {
+  background-color: #22C55E;
+  box-shadow: 0 1px 2px rgba(105, 81, 255, 0.05);
+  border-radius: 6px;
+  padding: 11px;
+  font-size: 16px;
+  line-height: 24px;
+  color: #F0FDF4;
+}
+
+.label {
+  width: 100%;
+  display: inline-block;
+  margin-bottom: 6px;
+}
+
+.input {
+  background-color: #FFFFFF;
+  font-size: 16px;
+  line-height: 24px;
+  width: 100%;
+  display: inline-block;
+  padding: 11px 14px;
+  border: 1px solid #D5DAE1;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+  border-radius: 8px;
+}
+
+::placeholder {
+  color: #BBC3CF;
+}
+
+.input--credit-card {
+  display: grid;
+  grid-template-columns: 1fr 60px 60px;
+}
+
+.input__blank {
+  border: none;
+}
+
+.subtotal-container {
+  display: flex;
+  flex-flow: column;
+  row-gap: 15px;
+}
+
